--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sniply">
-        <activity android:name=".Activities.PlayerActivity"></activity>
-        <activity android:name=".Activities.ListActivity"></activity>
-        <activity android:name=".Activities.ListOpenedActivity"></activity>
-        <activity android:name=".Activities.addToListActivity"></activity>
-        <activity android:name=".MainActivity"
-            android:exported="true">
+
+        <activity android:name=".Activities.PlayerActivity" />
+        <activity android:name=".Activities.ListActivity" />
+        <activity android:name=".Activities.ListOpenedActivity" />
+        <activity android:name=".Activities.addToListActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+            <activity
+                android:name=".Activities.StartActivity"
+                android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
