--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,12 @@ dependencies {
 
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    implementation 'com.github.bullheadandplato:AndroidEqualizer:2.2'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -42,4 +46,7 @@ dependencies {
 
 
 
+}
+configurations {
+    compile.exclude group: 'androidx.annotation', module: 'annotation'
 }
